--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "eslint": "6.8.0",
     "eslint-plugin-react": "^7.19.0",
+    "faker": "^4.1.0",
     "papaparse": "^5.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
